Normalize variable names in messages.properties
It covers the default login page ("welcome") and two auto-redirect
ones ("orcidredirect" and "defaultserviceredirect". The convention
is: screen.<screen name>.<element type>.<element description>.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -532,7 +532,7 @@ screen.welcome.label.loginwith=Sign in through external identity providers
 # Texts and messages that are shared across all pages
 #
 screen.generic.button.wip = One moment please ...
-screen.generic.link.loginsupport = Need help signing in?
+screen.generic.link.support = Need help signing in?
 #
 # Login page and login form submission
 #
@@ -543,12 +543,12 @@ screen.welcome.label.email.accesskey=e
 screen.welcome.label.password=<span class="accesskey">P</span>assword
 screen.welcome.label.password.accesskey=p
 screen.welcome.button.login=Sign in
-screen.rememberme.checkbox.title=Stay signed in
-screen.help.link.resetpassword=Reset password
-screen.delegation.button.orcid=Sign in with ORCiD
-screen.delegation.button.institution=Sign in through institution
-screen.delegation.heading.orcidredirect=Redirecting to ORCiD
-screen.flowless.heading.defaultserviceredirect=Redirecting to OSF login
+screen.welcome.checkbox.rememberme=Stay signed in
+screen.welcome.link.resetpassword=Reset password
+screen.welcome.button.orcidlogin=Sign in with ORCiD
+screen.welcome.button.institutionlogin=Sign in via institution
+screen.orcidredirect.heading=Redirecting to ORCiD
+screen.defaultserviceredirect.heading=Redirecting to OSF login
 #
 # Two factor login form submission
 #
