Two-factor page rework
* Re-styled inline error messages.
* Re-styled text-with-mdi and text-without-mdi
* Split complicated styles into more small and swappable ones. Thus
  different styles can be applied with improved flexibility.
* Added a login support / help link that floats right in the same
  section row of the "cancel"  button; and fixed alignment issue of
  the icon before the text.
* Improved and normalized messages.properties; and added an missing
  access key.
* Use darker background for the disabled email / account field
* Use OSF blue for the password revealing icon and fixed style
* Use OSF blue for the submit / verify button
* Applied relevant changes back to the default login page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -531,6 +531,7 @@ screen.welcome.label.loginwith=Sign in through external identity providers
 #
 # Texts and messages that are shared across all pages
 #
+screen.generic.label.source = Source:
 screen.generic.button.wip = One moment please ...
 screen.generic.link.support = Need help signing in?
 #
@@ -554,11 +555,12 @@ screen.defaultserviceredirect.heading=Redirecting to OSF login
 #
 screen.twofactor.pagetitle=Sign in
 screen.twofactor.instructions.top=Enter your one-time password to finish login
-screen.twofactor.label.email=OSF account email
+screen.twofactor.label.email=Your OSF <span class="accesskey">a</span>ccount
+screen.twofactor.label.email.accesskey=a
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
-screen.twofactor.button.cancel=Cancel
+screen.twofactor.link.cancel=Cancel
 screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
 # Terms of service consent check login form submission
