Institution login page rework - part 2
* Removed inline error messages
* Added scripts to enable / disable the sign-in button depending
  on the current value of the selection
* Fixed an issue where margins collapse by adding bottom padding
* Re-styled the whole page to be consistent with other login pages
* Updated text-with-mdi to behave similarly to text-without-mdi
* Use HTML <section> as much as possible to replace <div>
* Provided different messages for select-all and auto-select

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -581,15 +581,14 @@ screen.tosconsent.link.cancel=Cancel and go back to OSF
 # Institution login page
 #
 screen.institutionlogin.pagetitle=Institution SSO
-screen.institutionlogin.heading=Sign in through institution
-screen.institutionlogin.message=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
-screen.institutionlogin.select=Select your institution
-screen.institutionlogin.select.auto=Your institution
-screen.institutionlogin.select.all=Not your institution?
-screen.institutionlogin.select.errormessage=You must select an institution.
+screen.institutionlogin.instructions=Sign in through your institution
+screen.institutionlogin.message.select=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
+screen.institutionlogin.message.auto=Your institution has partnered with OSF. Please continue to sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
+screen.institutionlogin.heading.select=Select your institution
+screen.institutionlogin.heading.auto=Your institution
+screen.institutionlogin.link.select=Not your institution?
 screen.institutionlogin.button.submit=Sign in
-screen.institutionlogin.osf=Sign in with OSF
-screen.institutionlogin.backtoosf=Exit and go back to OSF
+screen.institutionlogin.osf=Sign in with your OSF account
 #
 # Generic login and logout success page
 #
