Flowless page rework
* Rewrote flowless header to use a similar app / nav bar where
  OSF CAS replaces OSF HOME and the sign-up button is disabled.
* Updated pre-login action to support clicking OSF CAS in app /
  nav bar to go back to login with default service added.
* Rewrote flowless error pages into follow customized top-down
  (banner-title-heading-message-button-link) style, with new
  style class login-error-card copyinmg most of the behaviors
  of class login-section.
* Cleaned up cas.css.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -170,7 +170,7 @@ screen.error.page.title.requestunsupported=Error - Unsupported Request
 screen.error.page.accessdenied=Access Denied
 screen.error.page.permissiondenied=You do not have permission to view this page.
 screen.error.page.requestunsupported=The request type or syntax is not supported.
-screen.error.page.loginagain=Login Again
+# screen.error.page.loginagain=Login Again
 screen.error.page.notfound=Page Not Found
 screen.error.page.doesnotexist=The page you are attempting to access does not exist at the moment.
 screen.error.page.authdenied=Authorization Denied
@@ -531,9 +531,9 @@ screen.welcome.label.loginwith=Sign in through external identity providers
 #
 # Texts and messages that are shared across all pages
 #
-screen.generic.label.source = Source:
-screen.generic.button.wip = One moment please ...
-screen.generic.link.support = Need help signing in?
+screen.generic.label.source=Source:
+screen.generic.button.wip=One moment please ...
+screen.generic.link.support=Need help signing in?
 #
 # Login page and login form submission
 #
@@ -625,6 +625,7 @@ authenticationFailure.TermsOfServiceConsentRequiredException=
 #
 # Authentication exception messages in stand-alone exception views
 #
+screen.error.page.loginagain=Log in again
 screen.authnerror.instructions=Oops! Something went wrong ...
 screen.authnerror.button.resendosfconfirmation=Resend confirmation email
 screen.authnerror.button.backtoosf=Exit and go back to OSF
