--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -627,6 +627,7 @@ authenticationFailure.TermsOfServiceConsentRequiredException=
 #
 screen.error.page.loginagain=Log in again
 screen.authnerror.instructions=Oops! Something went wrong ...
+screen.authnerror.instructions.devmode=Developer mode only !!!
 screen.authnerror.button.resendosfconfirmation=Resend confirmation email
 screen.authnerror.button.backtoosf=Exit and go back to OSF
 screen.accountdisabled.heading=Account disabled
