Generic login / logut success pages rework
* The generic login / logout success pages show up if no service is
  provided or if the service info is somehow lost during the login
  process. Both pages are now presented to users as an auhn error
  page with the "tip" section using "title-danger"  although it is
  not an anthn error internally.
* The primary goal of the login success page is to help the user
  continue to OSF signed-in. It also provides a secondray link for
  them to exit login and go back to OSF signed-out.
* Similarly, the primary gold of the logout success page is to help
  the user navigate back to OSF goodbye page. It aslo provides a
  secondary link for them to login again with default service.
* In addition, applied the new UI / UX design to both pages; added
  developer mode support (similar to the CAS unavailable page) to
  show a list of authn attrs for the login success page.
* Finally, renamed variables in messages.properties.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -592,17 +592,23 @@ screen.institutionlogin.osf=Sign in with your OSF account
 #
 # Generic login and logout success page
 #
-screen.generic.logout.header=Signed-out
-screen.generic.logout.heading=Logout successful
-screen.generic.logout.message=You have successfully logged out of the OSF Central Authentication Service (CAS). You may continue to OSF signed-out or return to the sign-in page.
-screen.generic.login.header=Signed-in
-screen.generic.login.heading=Login successful
-screen.generic.login.message=You have successfully logged into the OSF Central Authentication Service (CAS). You may continue to OSF signed-in or log out and go back to OSF home page.
-screen.generic.button.backtoosf=Continue to OSF
-screen.generic.button.backtologin=Return to sign-in
-screen.generic.button.logout=Log out
-screen.generic.button.viewdetails=View authentication details
-screen.generic.button.hidedetails=Hide authentication details
+screen.generic.logoutsuccess.title=Signed-out
+screen.generic.logoutsuccess.tip=Oops! Redirection didn't happen ...
+screen.generic.logoutsuccess.heading=Logout successful
+screen.generic.logoutsuccess.message=You have successfully logged out of OSF. However, you are seeing this page \
+  because the automatic redirection somehow didn't happen. Please click the button below to go back to OSF.
+screen.generic.logoutsuccess.button.continue=Back to OSF
+screen.generic.logoutsuccess.link.login=Login again
+#
+screen.generic.loginsuccess.title=Signed-in
+screen.generic.loginsuccess.tip=Oops! Redirection didn't happen ...
+screen.generic.loginsuccess.heading=Login successful
+screen.generic.loginsuccess.message=You have successfully logged into OSF! However, you are seeing this page because \
+  the automatic redirection somehow didn't happen. Please click the button below to continue to OSF.
+screen.generic.loginsuccess.button.continue=Continue to OSF
+screen.generic.loginsuccess.link.cancel=Exit login
+screen.generic.loginsuccess.button.show=View authentication details
+screen.generic.loginsuccess.button.hide=Hide authentication details
 #
 # Authentication exception messages on the login form submission page (inline / pop-up)
 #
