Clean up messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,7 @@
 ########################################################################################################################
-# Default messages.properties as of 6.2.x, see:
-# https://github.com/apereo/cas/blob/6.2.x/support/cas-server-support-thymeleaf/src/main/resources/messages.properties
-#
-# Note: customized messages are commented out and their respective customizations are added to the end of this file
+# Default messages.properties as of 6.2.x, see:                                                                        #
+# https://github.com/apereo/cas/blob/6.2.x/support/cas-server-support-thymeleaf/src/main/resources/messages.properties #
+# Note: customized messages are commented out and their respective customizations are added to the end of this file    #
 ########################################################################################################################
 #
 screen.welcome.welcome=Congratulations on bringing CAS online!  To learn how to authenticate, please review the default authentication handler configuration.
@@ -402,7 +401,7 @@ screen.mfaUnavailable.message=CAS was unable to reach your configured MFA provid
 # Login View
 #####################################################################
 #Resources Labels
-# cas.login.pagetitle=Login
+cas.login.pagetitle=Login
 cas.login.resources.header=Resources
 cas.login.resources.wiki=Documentation
 cas.login.resources.endpoints=Actuator Endpoints
@@ -485,17 +484,15 @@ passwordless.error.invalid.user=Provided username does not carry enough contact 
 
 noop.message=This's a noop message.
 #
-########################################################################################################################
-#
-# End of default messages.properties
-#
-########################################################################################################################
+######################################
+# End of default messages.properties #
+######################################
 
 
 
-########################################################################################################################
-# OSF CAS customized messages.properties
-########################################################################################################################
+##########################################
+# OSF CAS customized messages.properties #
+##########################################
 #
 # Header
 #
@@ -537,8 +534,8 @@ screen.generic.link.support=Need help signing in?
 #
 # Login page and login form submission
 #
-cas.login.pagetitle=Sign in
-screen.welcome.instructions=Sign in with your OSF account to continue
+cas.login.title=Sign in
+screen.welcome.tips=Sign in with your OSF account to continue
 screen.welcome.label.email=<span class="accesskey">E</span>mail
 screen.welcome.label.email.accesskey=e
 screen.welcome.label.password=<span class="accesskey">P</span>assword
@@ -553,20 +550,20 @@ screen.defaultserviceredirect.heading=Redirecting to OSF login
 #
 # Two factor login form submission
 #
-screen.twofactor.pagetitle=Sign in
-screen.twofactor.instructions.top=Enter your one-time password to finish login
+screen.twofactor.title=Sign in
+screen.twofactor.tips.top=Enter your one-time password to finish login
 screen.twofactor.label.email=Your OSF <span class="accesskey">a</span>ccount
 screen.twofactor.label.email.accesskey=a
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
 screen.twofactor.link.cancel=Cancel
-screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
+screen.twofactor.tips.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
 # Terms of service consent check login form submission
 #
-screen.tosconsent.pagetitle=Terms of service
-screen.tosconsent.instructions=Terms of use and privacy policy
+screen.tosconsent.title=Terms of service
+screen.tosconsent.tips=Terms of use and privacy policy
 screen.tosconsent.message.p1=You are seeing this page, either because this is your first-time signing into OSF via your \
   institution, or because we have recently updated the terms that you need to review.
 screen.tosconsent.message.p2=You must agree to our \
@@ -580,8 +577,8 @@ screen.tosconsent.link.cancel=Cancel and go back to OSF
 #
 # Institution login page
 #
-screen.institutionlogin.pagetitle=Institution SSO
-screen.institutionlogin.instructions=Sign in through your institution
+screen.institutionlogin.title=Institution SSO
+screen.institutionlogin.tips=Sign in through your institution
 screen.institutionlogin.message.select=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
 screen.institutionlogin.message.auto=Your institution has partnered with OSF. Please continue to sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
 screen.institutionlogin.heading.select=Select your institution
@@ -601,7 +598,7 @@ screen.generic.logoutsuccess.button.continue=Back to OSF
 screen.generic.logoutsuccess.link.login=Login again
 #
 screen.generic.loginsuccess.title=Signed-in
-screen.generic.loginsuccess.tip=Oops! Redirection didn't happen ...
+screen.generic.loginsuccess.tips=Oops! Redirection didn't happen ...
 screen.generic.loginsuccess.heading=Login successful
 screen.generic.loginsuccess.message=You have successfully logged into OSF! However, you are seeing this page because \
   the automatic redirection somehow didn't happen. Please click the button below to continue to OSF.
@@ -632,10 +629,11 @@ authenticationFailure.TermsOfServiceConsentRequiredException=
 # Authentication exception messages in stand-alone exception views
 #
 screen.error.page.loginagain=Log in again
-screen.authnerror.instructions=Oops! Something went wrong ...
-screen.authnerror.instructions.devmode=Developer mode only !!!
+screen.authnerror.title=Login Error
+screen.authnerror.tips=Oops! Something went wrong ...
+screen.authnerror.tips.devmode=Developer mode only !!!
 screen.authnerror.button.resendosfconfirmation=Resend confirmation email
-screen.authnerror.button.backtoosf=Exit and go back to OSF
+screen.authnerror.button.backtoosf=Exit login
 screen.accountdisabled.heading=Account disabled
 screen.accountdisabled.message=The OSF account associated with the email has been disabled. Please contact <a style=\
   "white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> to regain access.
@@ -647,14 +645,14 @@ screen.accountnotconfirmedidp.message=The OSF account associated with the email 
 screen.accountnotconfirmedosf.heading=Account not confirmed
 screen.accountnotconfirmedosf.message=The OSF account associated with the email has been registered but not confirmed. \
   Please check your email (and spam folder) or click the button below to resend your confirmation email.
-screen.unavailable.header=CAS Error
+screen.servererror.title=Server Error
 screen.unavailable.heading=CAS unavailable
 screen.unavailable.message=Your request cannot be completed at this time. Please return to OSF and try again later. If \
   this issue persists, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> with \
   a copy of the error details below.
 screen.unavailable.button.viewdetails=View error details
 screen.unavailable.button.hidedetails=Hide error details
-screen.service.error.header=Service Error
+screen.service.error.title=Service Error
 screen.service.error.heading=Service not authorized
 screen.service.error.message=The application you attempted to authenticate to is not authorized to use OSF CAS. Please \
   return to OSF and try again. If this issue persists, please contact <a style="white-space: nowrap" \
@@ -669,14 +667,12 @@ screen.onetimepasswordrequired.heading=OSF Two-factor Authentication
 screen.onetimepasswordrequired.message=Two-factor authentication has been enabled for this OSF account. Please enter \
   the one-time password generated by the authentication app. If you believe this should not happen, please contact <a \
   style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
-screen.institutionssofailed.pagetitle=Institution SSO Error
+screen.institutionssofailed.title=Institution SSO Error
 screen.institutionssofailed.heading=Institution login failed
 screen.institutionssofailed.message=Your request cannot be completed at this time. Please \
   <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later.</br></br>If the issue persists, \
   check with your institution to verify your account is entitled to authenticate to OSF.</br></br>If you believe this \
   is in error, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
-########################################################################################################################
-#
-# Enf of OSF CAS customized messages.properties
-#
-########################################################################################################################
+#################################################
+# Enf of OSF CAS customized messages.properties #
+# ###############################################
