Unsupported institution rework
* Added previously removed OSF institution URL to OsfUrlProperties
* Removed legacy oldCAS button styles
* Rewrote the page with the FE new design
* Added scripts for pre- and pro- processing the submission button
* Syncec styles between all three institution pages
* Renamed variables in messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -578,27 +578,27 @@ screen.tosconsent.link.cancel=Cancel and go back to OSF
 # Institution login page
 #
 screen.institutionlogin.title=Institution SSO
-screen.institutionlogin.tips=Sign in through your institution
+screen.institutionlogin.heading=Sign in through your institution
 screen.institutionlogin.message.select=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
 screen.institutionlogin.message.auto=Your institution has partnered with OSF. Please continue to sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
 screen.institutionlogin.heading.select=Select your institution
-screen.institutionlogin.select.unsupported=I can't find my institution
 screen.institutionlogin.heading.auto=Your institution
 screen.institutionlogin.link.select=Not your institution?
+screen.institutionlogin.link.unsupported=I can't find my institution
 screen.institutionlogin.button.submit=Sign in
 screen.institutionlogin.osf=Sign in with your OSF account
 #
 # Unsupported Institution
 #
-screen.unsupportedinstitutionlogin.heading=I can't find my institution
-screen.unsupportedinstitutionlogin.message=Signing into the OSF with institutional credentials is enabled for <a href="{0}">OSF Institutions members</a>.  If your institution is not yet an OSFI member, choose one of the following sign-in methods.
-screen.unsupportedinstitutionlogin.existing.heading=I already have an OSF account
-screen.unsupportedinstitutionlogin.existing.osf.message=If you have already have an OSF password, you can sign in to the OSF
-screen.unsupportedinstitutionlogin.existing.osf.button=Sign in with OSF
-screen.unsupportedinstitutionlogin.existing.institution.message=If you have not yet set an OSF password for your account, create a password
-screen.unsupportedinstitutionlogin.existing.institution.button=Set a password
-screen.unsupportedinstitutionlogin.existing.institution.label.email=<span class="accesskey">E</span>mail
-screen.unsupportedinstitutionlogin.existing.institution.label.email.accesskey=e
+screen.unsupp-instn.heading=I can't find my institution
+screen.unsupp-instn.message=Signing into the OSF with institutional credentials is enabled for <a href="{0}">OSF Institutions members</a>. If your institution is not yet an OSFI member, choose one of the following sign-in methods.
+screen.unsupp-instn.existing.heading=I already have an OSF account
+screen.unsupp-instn.existing.message=If you have already have an OSF password, you can sign in to the OSF
+screen.unsupp-instn.existing.button=Sign in with OSF
+screen.unsupp-instn.existing.setpw.message=If you have not yet set an OSF password for your account, create a password
+screen.unsupp-instn.existing.setpw.button=Set a password
+screen.unsupp-instn.existing.setpw.label.email=<span class="accesskey">E</span>mail
+screen.unsupp-instn.existing.setpw.label.email.accesskey=e
 #
 # Generic login and logout success page
 #
