--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -686,6 +686,12 @@ screen.institutionssofailed.message=Your request cannot be completed at this tim
   <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later.</br></br>If the issue persists, \
   check with your institution to verify your account is entitled to authenticate to OSF.</br></br>If you believe this \
   is in error, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+#
+# OAuth 2.0 Views and Error Views
+#
+screen.oauth.error.title=OAuth Error
+screen.oauth.error.heading=Authorization failed
+screen.oauth.error.exit=exit
 #################################################
 # Enf of OSF CAS customized messages.properties #
 # ###############################################
