--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -330,10 +330,10 @@ screen.authentication.gauth.register=Your account is not registered. Use the bel
 screen.authentication.gauth.key=Secret key to register is: <pre>{0}</pre>
 
 # OAuth
-screen.oauth.confirm.header=Authorization
-screen.oauth.confirm.message=Do you want to grant access to "{0}" ?
-screen.oauth.confirm.allow=Allow
-screen.oauth.confirm.deny=Deny
+# screen.oauth.confirm.header=Authorization
+# screen.oauth.confirm.message=Do you want to grant access to "{0}" ?
+# screen.oauth.confirm.allow=Allow
+# screen.oauth.confirm.deny=Deny
 cas.oauth.confirm.pagetitle=Approve Access
 
 cas.oauth.device.confirm.header=Connect Device
@@ -689,9 +689,18 @@ screen.institutionssofailed.message=Your request cannot be completed at this tim
 #
 # OAuth 2.0 Views and Error Views
 #
+screen.oauth.confirm.title=Approve Access
+screen.oauth.confirm.header=Approve or deny authorization
+screen.oauth.confirm.message=Do you want to grant access to the following service with listed access scopes?
+screen.oauth.confirm.service=Name: {0}
+screen.oauth.confirm.description=Description: {0}
+screen.oauth.confirm.scopes=Scope(s) requested: {0}
+screen.oauth.confirm.allow=Allow
+screen.oauth.confirm.deny=Deny
+screen.oauth.confirm.backtoosf=Exit and go back to OSF
 screen.oauth.error.title=OAuth Error
 screen.oauth.error.heading=Authorization failed
-screen.oauth.error.exit=exit
+screen.oauth.error.exit=Exit
 #################################################
 # Enf of OSF CAS customized messages.properties #
 # ###############################################
