--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -183,7 +183,7 @@ screen.gua.confirm.message=If you do not recognize this image as yours, do NOT c
 # Blocked Errors Page
 screen.error.page.title.blocked=Error - Permission Denied
 screen.blocked.header=Access Denied
-screen.blocked.message=You've entered the wrong password for the user too many times. You've been throttled.
+# screen.blocked.message=You've entered the wrong password for the user too many times. You've been throttled.
 AbstractAccessDecisionManager.accessDenied=You are not authorized to access this resource. Contact your CAS administrator for more info.
 
 # Confirmation Screen Messages
@@ -647,6 +647,9 @@ screen.authnerror.tips=Oops! Something went wrong ...
 screen.authnerror.tips.devmode=Developer mode only !!!
 screen.authnerror.button.resendosfconfirmation=Resend confirmation email
 screen.authnerror.button.backtoosf=Exit login
+screen.blocked.message=You are being throttled for attempting to login too frequently in a short amount of time. \
+  Please wait for a few minutes before trying again. If you believe this is an error, please contact \
+  <a style="white-space: nowrap" href="mailto:support@osf.io">support@osf.io</a> for help.
 screen.accountdisabled.heading=Account disabled
 screen.accountdisabled.message=The OSF account associated with the email has been disabled. Please contact <a style=\
   "white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> to regain access.
