--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -597,7 +597,7 @@ screen.unsupp-instn.existing.message=If you have already have an OSF password, y
 screen.unsupp-instn.existing.button=Sign in with OSF
 screen.unsupp-instn.existing.setpw.message=If you have not yet set an OSF password for your account, create a password
 screen.unsupp-instn.existing.setpw.button=Set a password
-screen.unsupp-instn.existing.setpw.label.email=<span class="accesskey">E</span>mail
+screen.unsupp-instn.existing.setpw.label.email=Your OSF Account <span class="accesskey">E</span>mail
 screen.unsupp-instn.existing.setpw.label.email.accesskey=e
 #
 # Generic login and logout success page
