Use default layout to handle "/error" (i.e. server error page)
"/error" is the end view state whenever an unexpected and unhandled
exception occurs, which can be triggered in both web flows that are
aware or unaware of the OSF. Thus, the template must use the default
layout and header to avoid rendering issues when the OSF is not in
context (though the chance is quite low).

In addition, URLs on this page have been updated to redirect users
back to OSF-aware pages so that they can navigate back to the OSF or
login again with the OSF as the service.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -647,6 +647,7 @@ screen.authnerror.tips=Oops! Something went wrong ...
 screen.authnerror.tips.devmode=Developer mode only !!!
 screen.authnerror.button.resendosfconfirmation=Resend confirmation email
 screen.authnerror.button.backtoosf=Exit login
+screen.authnerror.button.logout=Log out
 screen.blocked.message=You are being throttled for attempting to login too frequently in a short amount of time. \
   Please wait for a few minutes before trying again. If you believe this is an error, please contact \
   <a style="white-space: nowrap" href="mailto:support@osf.io">support@osf.io</a> for help.
