Reword and restyle tips on generic login and logout success pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -603,7 +603,7 @@ screen.unsupp-instn.existing.setpw.label.email.accesskey=e
 # Generic login and logout success page
 #
 screen.generic.logoutsuccess.title=Signed-out
-screen.generic.logoutsuccess.tip=Oops! Redirection didn't happen ...
+screen.generic.logoutsuccess.tips=Auto-redirection didn't happen ...
 screen.generic.logoutsuccess.heading=Logout successful
 screen.generic.logoutsuccess.message=You have successfully logged out of OSF. However, you are seeing this page \
   because the automatic redirection somehow didn't happen. Please click the button below to go back to OSF.
@@ -611,7 +611,7 @@ screen.generic.logoutsuccess.button.continue=Back to OSF
 screen.generic.logoutsuccess.link.login=Login again
 #
 screen.generic.loginsuccess.title=Signed-in
-screen.generic.loginsuccess.tips=Oops! Redirection didn't happen ...
+screen.generic.loginsuccess.tips=Auto-redirection didn't happen ...
 screen.generic.loginsuccess.heading=Login successful
 screen.generic.loginsuccess.message=You have successfully logged into OSF! However, you are seeing this page because \
   the automatic redirection somehow didn't happen. Please click the button below to continue to OSF.
