Fix a minor working issue on the instn-sso-migration page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -593,7 +593,7 @@ screen.institutionlogin.osf=Sign in with your OSF account
 screen.unsupp-instn.heading=I can't find my institution
 screen.unsupp-instn.message=Signing into the OSF with institutional credentials is enabled for <a href="{0}">OSF Institutions members</a>. If your institution is not yet an OSFI member, choose one of the following sign-in methods.
 screen.unsupp-instn.existing.heading=I already have an OSF account
-screen.unsupp-instn.existing.message=If you have already have an OSF password, you can sign in to the OSF
+screen.unsupp-instn.existing.message=If you already have an OSF password, you can sign in to the OSF
 screen.unsupp-instn.existing.button=Sign in with OSF
 screen.unsupp-instn.existing.setpw.message=If you have not yet set an OSF password for your account, create a password
 screen.unsupp-instn.existing.setpw.button=Set a password
