Customize casPac4jStopWebflow.html with OSF-style and more details

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -705,6 +705,15 @@ screen.oauth.confirm.backtoosf=Exit and go back to OSF
 screen.oauth.error.title=OAuth Error
 screen.oauth.error.heading=Authorization failed
 screen.oauth.error.exit=Exit
+#
+# Pac4j Authentication Delegation Error Views
+#
+screen.pac4j.error.title=SSO Error
+screen.pac4j.error.heading=Delegated authentication error
+screen.pac4j.error.message=Your request cannot be completed at this time. Either the authentication request was \
+  rejected / cancelled, or the authentication provider denied access due to permissions, privacy settings, etc. \
+  Please exit login and try again later.</br></br>If the issue persists, please contact <a style="white-space: \
+  nowrap" href="mailto:support@osf.io">Support</a> for help.
 #################################################
 # Enf of OSF CAS customized messages.properties #
 # ###############################################
