We are in 2022 with copyright year automatically updated

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -516,7 +516,7 @@ cas.login.resources.osf.donate=Donate
 #
 # Footer
 #
-copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; 2021</span>&#160;\
+copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0}</span>&#160;\
   <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124;&#160;\
   <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a>&#160;&#124;&#160;\
   <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>&#160;&#124;&#160;\
