Create a new exception flow for API connection/communication errors

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -693,6 +693,9 @@ screen.institutionssofailed.message=Your request cannot be completed at this tim
 screen.institutionselectivessofailed.message=Your institutional account is unable to authenticate to OSF. \
   Please check with your institution. If your institution believes this is in error, please contact \
   <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionosfapifailure.message=Your request cannot be completed at this time due to an unexpected error. Please \
+  <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later.</br></br>If the issue persists, \
+  please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
 #
 # OAuth 2.0 Views and Error Views
 #
