Add new pages and rework user-facing error messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -686,16 +686,37 @@ screen.onetimepasswordrequired.message=Two-factor authentication has been enable
   style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
 screen.institutionssofailed.title=Institution SSO Error
 screen.institutionssofailed.heading=Institution login failed
-screen.institutionssofailed.message=Your request cannot be completed at this time. Please \
-  <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later.</br></br>If the issue persists, \
-  check with your institution to verify your account is entitled to authenticate to OSF.</br></br>If you believe this \
-  is in error, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
-screen.institutionssoselectivelogindenied.message=Your institutional account is unable to authenticate to OSF. \
-  Please check with your institution. If your institution believes this is in error, please contact \
-  <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
-screen.institutionssoosfapifailed.message=Your request cannot be completed at this time due to an unexpected error. Please \
-  <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later.</br></br>If the issue persists, \
-  please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssofailed.message=\
+  Your request cannot be completed at this time. \
+  Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
+  If the issue persists, check with your institution to verify your account is entitled to authenticate to OSF. \
+  If you believe this is in error, \
+  contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoaccountinactive.message=\
+  Institution login is not available for an inactive OSF account. \
+  Please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoattributemissing.message=\
+  Your request cannot be completed at this time. \
+  The system failed to receive required information from your institution. \
+  Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
+  If the issue persists, contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoattributeparsingfailed.message=\
+  Your request cannot be completed at this time. \
+  The system failed to validate the information provided by your institution. \
+  Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
+  If the issue persists, contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoduplicateidentity.message=\
+  Your request cannot be completed at this time due to an error caused by duplicate SSO identity. \
+  Please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoselectivelogindenied.message=\
+  Your institutional account is unable to authenticate to OSF. Please check with your institution. \
+  If your institution believes this is in error, \
+  contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoosfapifailed.message=\
+  Your request cannot be completed at this time due to an unexpected error. \
+  Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
+  If the issue persists, contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+
 #
 # OAuth 2.0 Views and Error Views
 #
