Update error message and exception page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -708,10 +708,15 @@ screen.institutionssoattributeparsingfailed.message=\
 screen.institutionssoduplicateidentity.message=\
   Your request cannot be completed at this time due to an error caused by duplicate SSO identity. \
   Please contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
-screen.institutionssoselectivelogindenied.message=\
+screen.institutionssoselectivelogindenied.standard.message=\
   Your institutional account is unable to authenticate to OSF. Please check with your institution. \
   If your institution believes this is in error, \
   contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssoselectivelogindenied.support.message=\
+  Your institutional account is unable to authenticate to OSF. \
+  Please contact <a style="white-space: nowrap" href="mailto:{0}">support at your institution</a> first. \
+  If your institution believes this is in error, \
+  contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> for help.
 screen.institutionssoosfapifailed.message=\
   Your request cannot be completed at this time due to an unexpected error. \
   Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
