Handle institution SSO multiple emails not supported error

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -721,6 +721,11 @@ screen.institutionssoosfapifailed.message=\
   Your request cannot be completed at this time due to an unexpected error. \
   Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
   If the issue persists, contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
+screen.institutionssomultipleemailsnotsupported.message=\
+  Your request cannot be completed at this time. \
+  The system received multiple SSO emails from your institution. \
+  Please <a style="white-space: nowrap" href="{0}">return to OSF</a> and try again later. \
+  If the issue persists, contact <a style="white-space: nowrap" href="mailto:support@osf.io">Support</a> for help.
 
 #
 # OAuth 2.0 Views and Error Views
