Update messages.properties for new header translation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -496,6 +496,8 @@ noop.message=This's a noop message.
 #
 # Header
 #
+cas.header.togglenav=Toggle Navigation
+
 # App bar (top)
 #
 # App drawer (left)
