--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -527,16 +527,21 @@ copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0
 # TODO: Need logos and URLs
 footer.line1=\
   <span>\
-    <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124;&#160;\
-    <a style="white-space: nowrap" href="https://osf.io/ezcuj/">Reproducibility Project: Psychology</a>&#160;&#124;&#160;\
-    <a style="white-space: nowrap" href="https://osf.io/ezcuj/">Reproducibility Project: Cancer Biology</a>&#160;&#124;&#160;\
-    <a style="white-space: nowrap" href="https://status.cos.io/">Status</a>\
+    <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a>\
   </span>\
   <span>\
-    <a style="white-space: nowrap" href="https://github.com/centerforopenscience">X</a>&#160;\
-    <a style="white-space: nowrap" href="https://github.com/centerforopenscience">FB</a>&#160;\
-    <a style="white-space: nowrap" href="https://github.com/centerforopenscience">GH</a>&#160;\
-    <a style="white-space: nowrap" href="https://github.com/centerforopenscience">LI</a>&#160;\
+    <a style="white-space: nowrap" href="https://github.com/centerforopenscience" aria-label="GitHub">\
+      <img src="/images/github.svg" alt="GitHub">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://www.linkedin.com/company/center-for-open-science" aria-label="LinkedIn">\
+      <img src="/images/linkedin.svg" alt="LinkedIn">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://bsky.app/profile/cos.io" aria-label="Bluesky">\
+      <img src="/images/bluesky.svg" alt="Bluesky">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://fosstodon.org/@CenterforOpenScience" aria-label="Mastodon">\
+      <img src="/images/mastodon.svg" alt="Mastodon">\
+    </a>&#160;\
   </span>
 # TODO: update URLs
 footer.line2=\
