Address leftover comments

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -518,13 +518,6 @@ cas.login.resources.osf.donate=Donate
 #
 # Footer
 #
-# TODO: Can remove this message?
-copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0}</span>&#160;\
-  <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124;&#160;\
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a>&#160;&#124;&#160;\
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>&#160;&#124;&#160;\
-  <a style="white-space: nowrap" href="https://status.cos.io/">Status</a>
-# TODO: Need logos and URLs
 footer.line1=\
   <span>\
     <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a>\
@@ -543,14 +536,14 @@ footer.line1=\
       <img src="/images/mastodon.svg" alt="Mastodon">\
     </a>&#160;\
   </span>
-# TODO: update URLs
+
 footer.line2=\
   <span style="white-space: nowrap">\
     <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a>&#160;&#124;&#160;\
     <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>&#160;&#124;&#160;\
     <a style="white-space: nowrap" href="https://status.cos.io/">Status</a>&#160;&#124;&#160;\
-    <a style="white-space: nowrap" href="https://status.cos.io/">API</a>&#160;&#124;&#160;\
-    <a style="white-space: nowrap" href="https://status.cos.io/">TOP Guidelines</a>\
+    <a style="white-space: nowrap" href="https://developer.osf.io/">API</a>&#160;&#124;&#160;\
+    <a style="white-space: nowrap" href="https://www.cos.io/initiatives/top-guidelines">TOP Guidelines</a>\
   </span>\
   <span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0}</span>
 
