--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -434,10 +434,10 @@ cas.mfa.providerselection.mfa-simple.notes=Allow CAS to act as a multifactor aut
   issuing tokens and sending them to end-users via pre-defined communication channels such as email or text messages.
 cas.mfa.providerselection.mfa-yubikey=YubiKey Multifactor Authentication
 cas.mfa.providerselection.mfa-yubikey.notes=Yubico is a cloud-based service that enables strong, easy-to-use \
-  and affordable two-factor authentication with one-time passwords through their flagship product, YubiKey. 
+  and affordable two-factor authentication with one-time passwords through their flagship product, YubiKey.
 cas.mfa.providerselection.mfa-u2f=YubiKey Multifactor Authentication
 cas.mfa.providerselection.mfa-u2f.notes=U2F is an open authentication standard that enables internet users \
-  to securely access any number of online services, with one single device, instantly and with no drivers, or client software needed. 
+  to securely access any number of online services, with one single device, instantly and with no drivers, or client software needed.
 
 cas.mfa.duologin.pagetitle=Duo Security Login
 
@@ -496,6 +496,8 @@ noop.message=This's a noop message.
 #
 # Header
 #
+cas.header.togglenav=Toggle Navigation
+
 # App bar (top)
 #
 # App drawer (left)
@@ -516,11 +518,35 @@ cas.login.resources.osf.donate=Donate
 #
 # Footer
 #
-copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0}</span>&#160;\
-  <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124;&#160;\
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a>&#160;&#124;&#160;\
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>&#160;&#124;&#160;\
-  <a style="white-space: nowrap" href="https://status.cos.io/">Status</a>
+footer.line1=\
+  <span>\
+    <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a>\
+  </span>\
+  <span>\
+    <a style="white-space: nowrap" href="https://github.com/centerforopenscience" aria-label="GitHub">\
+      <img src="/images/github.svg" alt="GitHub">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://www.linkedin.com/company/center-for-open-science" aria-label="LinkedIn">\
+      <img src="/images/linkedin.svg" alt="LinkedIn">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://bsky.app/profile/cos.io" aria-label="Bluesky">\
+      <img src="/images/bluesky.svg" alt="Bluesky">\
+    </a>&#160;\
+    <a style="white-space: nowrap" href="https://fosstodon.org/@CenterforOpenScience" aria-label="Mastodon">\
+      <img src="/images/mastodon.svg" alt="Mastodon">\
+    </a>&#160;\
+  </span>
+
+footer.line2=\
+  <span style="white-space: nowrap">\
+    <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a>&#160;&#124;&#160;\
+    <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>&#160;&#124;&#160;\
+    <a style="white-space: nowrap" href="https://status.cos.io/">Status</a>&#160;&#124;&#160;\
+    <a style="white-space: nowrap" href="https://developer.osf.io/">API</a>&#160;&#124;&#160;\
+    <a style="white-space: nowrap" href="https://www.cos.io/initiatives/top-guidelines">TOP Guidelines</a>\
+  </span>\
+  <span style="white-space: nowrap">Copyright &copy; 2011 &ndash; {0}</span>
+
 #
 # IdP SSO
 #
